<resources>

    <string name="app_name">Translated Travel</string>
    <string name="title_inspiration">Inspiration</string>
    <string name="title_search">Search</string>
    <string name="title_trips">Trips</string>
    <string name="title_profile">Profile</string>

    <string name="header_search">How does your journey begin?</string>
    <string name="option_blank">__________</string>
    <string name="option_locale">I\'m traveling to</string>
    <string name="option_sight">I want to see this sight:</string>
    <string name="option_budget">My budget is $</string>
    <string name="option_any">Surprise me with an adventure!</string>
    <string name="journey_on">Journey On</string>
    <string name="future_feature">This Feature is Upcoming</string>

    <string name="header_needs">What does your journey need?</string>
    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>
    <string name="sights">Points of Interest</string>
    <string name="travel_reason">Is there a main reason for this trip? (optional)</string>
    <string name="work">Work</string>
    <string name="family">Family Vacation</string>
    <string name="adventure">Adventure</string>
    <string name="romance">Romantic Getaway</string>
    <string name="historic">Historical Interest</string>
    <string name="food">Food Interest</string>

    <string name="header_flights">Fancy a flight?</string>
    <string name="label_origin">From</string>
    <string name="label_destination">To</string>
    <string name="select_from">Select Origin</string>
    <string name="select_to">Select Destination</string>
    <string name="no_airports">No Airports Found</string>
    <string name="label_date">On</string>
    <string name="when">When?</string>
    <string name="no_flights">No Flights Found</string>
    <string name="nonstop">Nonstop</string>

    <string name="flight_dates">Select Flight Date(s)</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="apply">Apply</string>

    <string name="header_hotels">Where to lay your head?</string>
    <string name="label_in">In</string>
    <string name="no_hotels">No Hotels Found</string>
    <string name="amenities">\nAmenities:</string>

    <string name="header_sights">Looking for an experience?</string>
    <string name="no_sights">No Points of Interest Found</string>
    <string name="tags">\nTags:</string>

    <string name="header_trip">How\'s the trip looking?</string>
    <string name="save_trip">Awesome, Save It!</string>
    <string name="trip_saved">Trip Saved</string>

    <string name="header_inspiration">Ready for some trip inspiration?</string>
    <string name="no_destinations">No Destinations Found\nTry again later</string>

    <string name="header_profile">Want to customize your experience?</string>
    <string name="profile_name">Name / Nickname</string>
    <string name="profile_origin">Favorite Origin Airport</string>
    <string name="profile_currency">Preferred Currency</string>
    <string name="profile_wishlist">Places To Travel</string>
    <string name="profile_save">Save Profile</string>
    <string name="hint_airport_code">ATL</string>
    <string name="hint_currency_usd">USD</string>
    <string name="hint_wishlist_locations">London, England\nParis, France\nMadrid, Spain\nBerlin, Germany </string>
    <string name="profile_saved">Profile Saved</string>

    <string name="progress_destinations">Finding you some\n awe inspiring destinations</string>
    <string name="progress_flights">Soon you\'ll be flying high\non cloud 9</string>
    <string name="progress_hotels">Taking a brief nap&#8230;\nmaking sure the mattress is just right\nfor you</string>
    <string name="progress_sights">You deserve to experience nothing but the best</string>

    <string name="header_trips">Time for a trip?</string>
    <string name="no_trips">Oh no you need to find some first</string>
    <string name="trip_no_show">Unable to display saved trips at the moment</string>

</resources>
