<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentRoot"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <android.support.v7.widget.CardView style="@style/CardItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Header"
                android:text="@string/header_profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profile_name"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                tools:text="Love" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profile_origin"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/user_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_airport_code" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profile_currency"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/user_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_currency_usd"
                tools:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profile_wishlist"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/user_wishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:hint="@string/hint_wishlist_locations" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/profile_save"
                android:textColor="@android:color/white"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>