<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentRoot"
    android:orientation="vertical"
    tools:context=".fragment.FlightsFragment">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:text="@string/header_flights" />

    <android.support.v7.widget.CardView
        android:id="@+id/filter_card"
        style="@style/CardItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_origin"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/from_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/colorAccent"
                android:prompt="@string/select_from"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_destination"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/to_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/colorAccent"
                android:prompt="@string/select_to"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:text="@string/when"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_flight"
        android:padding="8dp"
        android:text="@string/title_search" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/flight_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>