<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/menu_trips"
        android:icon="@drawable/ic_agenda_black_24dp"
        android:title="@string/title_trips"
        app:actionViewClass="android.widget.TextView"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_profile"/>

</menu>
