<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
style="@style/FragmentRoot"
android:orientation="vertical"
tools:context=".fragment.HotelsFragment">

<TextView
    style="@style/Header"
    android:text="@string/header_hotels" />

    <!--TODO Show selected flight-->
    <!--<include layout="@layout/item_flight_offer" />-->

<ImageView
    android:id="@+id/expand"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_gravity="end"
    android:src="@drawable/ic_expand_more"
    android:tint="@color/colorAccent"
    android:visibility="gone" />

<android.support.v7.widget.CardView
    android:id="@+id/filter_card"
    style="@style/CardItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_in"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/colorAccent"
            android:prompt="@string/select_from"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/when"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>

<Button
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/colorAccent"
    android:drawableEnd="@drawable/ic_hotel"
    android:padding="@dimen/activity_horizontal_margin"
    android:text="@string/title_search"
    android:textColor="@android:color/white"
    android:visibility="gone"/>

<ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone" />

<android.support.v7.widget.RecyclerView
    android:id="@+id/hotel_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<Button
    android:id="@+id/next_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    android:padding="8dp"
    android:text="@string/journey_on"
    android:textColor="@color/colorAccent"
    android:visibility="gone" />

</LinearLayout>