<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentRoot"
    android:orientation="vertical"
    tools:context=".fragment.SightsFragment">

    <TextView
        style="@style/Header"
        android:text="@string/header_sights" />

    <ImageView
        android:id="@+id/expand"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_expand_more"
        android:tint="@color/colorAccent"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/filter_card"
        style="@style/CardItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:prompt="@string/select_from"
                android:spinnerMode="dialog"
                tools:text="Atlanta, GA USA" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:drawableEnd="@drawable/ic_place"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/title_search"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/progress_sights"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sight_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:padding="8dp"
        android:text="@string/journey_on"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

</LinearLayout>